# OptimizationFramework

./: .gitignore  README.md  env.sh  install.sh  macinstall.sh  pyproject.toml  requirements.txt
examples/: basic_example.py  circle_example.py
src/OF/: __init__.py
src/OptimizationFramework/: __init__.py  lossFunctions.py  optimizers.py  plottingUtils.py
